@@ -6,6 +6,7 @@ import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
+import play.shaded.oauth.org.apache.commons.codec.binary.Base64;
 
 /**
  * DES加解密工具类
@@ -44,7 +45,8 @@ class DESUtils {
             Cipher cipher = Cipher.getInstance("DES");  
             cipher.init(Cipher.ENCRYPT_MODE, secretKey, sr);  
             // 加密，并把字节数组编码成字符串  
-            encryptedData = new sun.misc.BASE64Encoder().encode(cipher.doFinal(data.getBytes()));  
+            //encryptedData = new sun.misc.BASE64Encoder().encode(cipher.doFinal(data.getBytes()));
+            encryptedData = (Base64.encodeBase64(cipher.doFinal(data.getBytes()))).toString();
         } catch (Exception e) {  
             throw new RuntimeException("加密错误，错误信息：", e);  
         }  
@@ -77,7 +79,8 @@ class DESUtils {
             Cipher cipher = Cipher.getInstance("DES");  
             cipher.init(Cipher.DECRYPT_MODE, secretKey, sr);  
             // 把字符串解码为字节数组，并解密  
-            decryptedData = new String(cipher.doFinal(new sun.misc.BASE64Decoder().decodeBuffer(cryptData)));  
+            //decryptedData = new String(cipher.doFinal(new sun.misc.BASE64Decoder().decodeBuffer(cryptData)));
+            decryptedData = new String(cipher.doFinal(Base64.decodeBase64(cryptData.getBytes())));
         } catch (Exception e) {  
             throw new RuntimeException("解密错误，错误信息：", e);  
         }  
